{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 56,
  "lineage": "c37030ed-c44e-830c-acf1-6db5e5bac671",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Intern_jumpbox_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0801a1e12f4a9ccc0",
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:instance/i-000dff1a2a2b8bc4a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000dff1a2a2b8bc4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key_pair1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00850f6dbfd29bc49",
            "private_dns": "ip-10-0-0-220.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.220",
            "public_ip": "13.212.197.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f22aea36e356b4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09eb17ce50169c16d",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_jumpbox_server",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_jumpbox_server",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03dfad48285bbb40f"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.Intern_public_security_group",
            "module.subnet.aws_subnet.Intern_public_subnet",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Intern_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-055d15d9cfddf7bd3",
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:instance/i-0fa1b8128e35fe23e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa1b8128e35fe23e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "private_key_pair1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0867d7433ca82d0d2",
            "private_dns": "ip-10-0-1-56.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dfbd5bba976b433c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbc6d720daf01b2",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_server",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_server",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b4234bcbe11cefa"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.Intern_private_security_group",
            "module.subnet.aws_subnet.Intern_subnet",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Intern_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d4a67e7c2127d9d",
            "domain": "vpc",
            "id": "eipalloc-07d4a67e7c2127d9d",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-77-33-175.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.33.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_nat_eip",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_nat_eip",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.Intern_igw",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Intern_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:internet-gateway/igw-02e7481055145fc99",
            "id": "igw-02e7481055145fc99",
            "owner_id": "283300159070",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_igw",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_igw",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "vpc_id": "vpc-04705dfd739529948"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Intern_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d4a67e7c2127d9d",
            "connectivity_type": "public",
            "id": "nat-09b78946d2eb95360",
            "network_interface_id": "eni-014231dcd719dfdae",
            "private_ip": "10.0.0.238",
            "public_ip": "52.77.33.175",
            "subnet_id": "subnet-09eb17ce50169c16d",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_nat_gateway",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_nat_gateway",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            }
          },
          "dependencies": [
            "module.network.aws_eip.Intern_nat_eip",
            "module.network.aws_internet_gateway.Intern_igw",
            "module.subnet.aws_subnet.Intern_public_subnet",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Intern_NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:network-acl/acl-0add321266461ee8e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 400,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.194.229.128/28",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.194.229.160/28",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0add321266461ee8e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.194.229.128/28",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "10.194.229.160/28",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "283300159070",
            "subnet_ids": [],
            "tags": {
              "Environment": "Test",
              "Name": "Intern_NACL",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_NACL",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "vpc_id": "vpc-04705dfd739529948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Intern_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:route-table/rtb-0dc804e6536630771",
            "id": "rtb-0dc804e6536630771",
            "owner_id": "283300159070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09b78946d2eb95360",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "Intern_private_route_table",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_private_route_table",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04705dfd739529948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.Intern_nat_eip",
            "module.network.aws_internet_gateway.Intern_igw",
            "module.network.aws_nat_gateway.Intern_nat_gateway",
            "module.subnet.aws_subnet.Intern_public_subnet",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Intern_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:route-table/rtb-072b9ddc930aa4f10",
            "id": "rtb-072b9ddc930aa4f10",
            "owner_id": "283300159070",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e7481055145fc99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Test",
              "Name": "Intern_public_route_table",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_public_route_table",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04705dfd739529948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.Intern_igw",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Intern_private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5e2da39e274a51",
            "route_table_id": "rtb-0dc804e6536630771",
            "subnet_id": "subnet-09fbc6d720daf01b2"
          },
          "dependencies": [
            "module.network.aws_eip.Intern_nat_eip",
            "module.network.aws_internet_gateway.Intern_igw",
            "module.network.aws_nat_gateway.Intern_nat_gateway",
            "module.network.aws_route_table.Intern_private_route_table",
            "module.subnet.aws_subnet.Intern_public_subnet",
            "module.subnet.aws_subnet.Intern_subnet",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Intern_public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0350a12abf6483a",
            "route_table_id": "rtb-072b9ddc930aa4f10",
            "subnet_id": "subnet-09eb17ce50169c16d"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.Intern_igw",
            "module.network.aws_route_table.Intern_public_route_table",
            "module.subnet.aws_subnet.Intern_public_subnet",
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Intern_private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:security-group/sg-05b4234bcbe11cefa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b4234bcbe11cefa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Intern_private_security_group",
            "name_prefix": "",
            "owner_id": "283300159070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "Intern_private_security_group",
              "Owner": "Julian",
              "Service": "Example"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_private_security_group",
              "Owner": "Julian",
              "Service": "Example"
            },
            "timeouts": null,
            "vpc_id": "vpc-04705dfd739529948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Intern_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:security-group/sg-03dfad48285bbb40f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dfad48285bbb40f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Intern_public_security_group",
            "name_prefix": "",
            "owner_id": "283300159070",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "Name": "Intern_public_security_group",
              "Owner": "Julian",
              "Service": "Example"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_public_security_group",
              "Owner": "Julian",
              "Service": "Example"
            },
            "timeouts": null,
            "vpc_id": "vpc-04705dfd739529948"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Intern_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:subnet/subnet-09eb17ce50169c16d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09eb17ce50169c16d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "283300159070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_public_subnet",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_public_subnet",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "vpc_id": "vpc-04705dfd739529948"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Intern_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:subnet/subnet-09fbc6d720daf01b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fbc6d720daf01b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283300159070",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_subnet",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_subnet",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "vpc_id": "vpc-04705dfd739529948"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Intern_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Intern_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:283300159070:vpc/vpc-04705dfd739529948",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0904a00efc9a67b4c",
            "default_route_table_id": "rtb-0c556a6e3e067e26f",
            "default_security_group_id": "sg-0a9ec45e7c0c7841f",
            "dhcp_options_id": "dopt-0d09978e711250603",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04705dfd739529948",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c556a6e3e067e26f",
            "owner_id": "283300159070",
            "tags": {
              "Environment": "Test",
              "Name": "Intern_VPC",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "Intern_VPC",
              "Owner": "Julian",
              "Project": "Intern",
              "Version": "1.1"
            }
          }
        }
      ]
    }
  ]
}